designing address page, and push to fork repl

--- a/src/BlazorWebApp/BlazorWebApp.Host/Components/App.razor
+++ b/src/BlazorWebApp/BlazorWebApp.Host/Components/App.razor
@@ -20,6 +20,7 @@
 
     <!-- App Styles -->
     <link rel="stylesheet" href="@Assets["app.css"]" />
+    <link rel="stylesheet" href="@Assets["/css/rmb-energy-studio.css"]" />
     <link rel="stylesheet" href="@Assets["BlazorWebApp.Host.styles.css"]" />
     <ImportMap />
     <HeadOutlet @rendermode="new InteractiveWebAssemblyRenderMode(prerender: false)" />
