--- a/src/BlazorWebApp/BlazorWebApp.Client/Pages/Home.razor
+++ b/src/BlazorWebApp/BlazorWebApp.Client/Pages/Home.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>RMB Energy Studio</PageTitle>
 
-<ExampleWelcome />
-<ExampleComponent />
+<RmbEnergyStudio />
